# Clustering

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: dataset.csv  datasetLess.csv
scripts/: plot.py
src/common/: CMakeLists.txt  Point.cpp  Point.hpp  Utils.cpp  Utils.hpp
src/parallel/: CMakeLists.txt  OpenCLContext.cpp  OpenCLContext.hpp  Solution.cpp  SolutionParallel.cpp  SolutionParallel.hpp  parallel.cpp
src/parallel/cl/: kMeans.cl
src/sequential/: CMakeLists.txt  Solution.cpp  Solution.hpp  sequential.cpp
text/: biblatex.bib  semenarka.aux  semenarka.tex  seminarka.cls
